# euler_skeleton

./: CMakeLists.txt  main.cpp  prt.cpp  prt.h  templates.cpp
